<resources>
    <string name="app_name">Paper in Economics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="with_google">with Google</string>
    <string name="aer_logo">AER_logo</string>
    <string name="news_unread">News (unread)</string>
    <string name="see_more"><![CDATA[see more >]]></string>
    <string name="american_economic_review">American Economic Review</string>
    <string name="econometrica">Econometrica</string>
    <string name="journal_logo_image">journal logo image</string>
    <string name="follow">follow</string>
    <string name="jef_code">JEF category</string>
    <string name="w_abstract">Abstract</string>
</resources>